Replace OpenAI with Gemini API key for cheaper LLM calls

--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Next it's time to load the API keys into environment variables\n",
     "# If this returns false, see the next cell!\n",
@@ -141,25 +152,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gemini API Key exists and begins AIza\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the key - if you're not using OpenAI, check whichever key you're using! Ollama doesn't need a key.\n",
     "\n",
     "import os\n",
-    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
+    "gemini_api_key = os.getenv('GEMINI_API_KEY')\n",
+    "GEMINI_BASE_URL = \"https://generativelanguage.googleapis.com/v1beta/openai/\"\n",
     "\n",
-    "if openai_api_key:\n",
-    "    print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
+    "\n",
+    "if gemini_api_key:\n",
+    "    print(f\"Gemini API Key exists and begins {gemini_api_key[:4]}\")\n",
     "else:\n",
-    "    print(\"OpenAI API Key not set - please head to the troubleshooting guide in the setup folder\")\n",
+    "    print(\"Gemini API Key not set - please head to the troubleshooting guide in the setup folder\")\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,13 +201,12 @@
     "# If you're not sure what it means to create an instance of a class - head over to the guides folder (guide 6)!\n",
     "# If you get a NameError - head over to the guides folder (guide 6)to learn about NameErrors - always instantly fixable\n",
     "# If you're not using OpenAI, you just need to slightly modify this - precise instructions are in the AI APIs guide (guide 9)\n",
-    "\n",
-    "openai = OpenAI()"
+    "gemini = OpenAI(base_url=GEMINI_BASE_URL, api_key=gemini_api_key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,26 +217,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 + 2 = 4\n"
+     ]
+    }
+   ],
    "source": [
-    "# And now call it! Any problems, head to the troubleshooting guide\n",
-    "# This uses GPT 4.1 nano, the incredibly cheap model\n",
-    "# The APIs guide (guide 9) has exact instructions for using even cheaper or free alternatives to OpenAI\n",
-    "# If you get a NameError, head to the guides folder (guide 6) to learn about NameErrors - always instantly fixable\n",
+    "# Using the Gemini 2.5 flash model\n",
     "\n",
-    "response = openai.chat.completions.create(\n",
-    "    model=\"gpt-4.1-nano\",\n",
+    "response = gemini.chat.completions.create(\n",
+    "    model=\"gemini-2.5-flash\",\n",
     "    messages=messages\n",
     ")\n",
     "\n",
-    "print(response.choices[0].message.content)\n"
+    "print(response.choices[0].message.content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,14 +253,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What should replace the question mark?\n",
+      "\n",
+      "---\n",
+      "\n",
+      "Consider a 3x3 grid where each cell contains:\n",
+      "1.  An outer geometric shape (Square, Circle, or Triangle).\n",
+      "2.  An inner geometric shape (a smaller Square, Circle, or Triangle).\n",
+      "3.  A number of small filled circles (dots).\n",
+      "\n",
+      "The grid is as follows:\n",
+      "\n",
+      "[ (Outer Square, Inner Square), 1 dot ] | [ (Outer Square, Inner Circle), 2 dots ] | [ (Outer Square, Inner Triangle), 3 dots ]\n",
+      "---------------------------------------|-----------------------------------------|-------------------------------------------\n",
+      "[ (Outer Circle, Inner Circle), 2 dots ] | [ (Outer Circle, Inner Triangle), 4 dots ] | [ (Outer Circle, Inner Square), 6 dots ]\n",
+      "---------------------------------------|-----------------------------------------|-------------------------------------------\n",
+      "[ (Outer Triangle, Inner Triangle), 3 dots ] | [ (Outer Triangle, Inner Square), 6 dots ] | [ ? ]\n"
+     ]
+    }
+   ],
    "source": [
-    "# ask it - this uses GPT 4.1 mini, still cheap but more powerful than nano\n",
-    "\n",
-    "response = openai.chat.completions.create(\n",
-    "    model=\"gpt-4.1-mini\",\n",
+    "response = gemini.chat.completions.create(\n",
+    "    model = \"gemini-2.5-flash\",\n",
     "    messages=messages\n",
     ")\n",
     "\n",
@@ -246,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,14 +302,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's analyze the patterns for each of the three attributes in the 3x3 grid:\n",
+      "\n",
+      "**1. Outer Geometric Shape:**\n",
+      "*   **Row 1:** Square, Square, Square\n",
+      "*   **Row 2:** Circle, Circle, Circle\n",
+      "*   **Row 3:** Triangle, Triangle, ?\n",
+      "\n",
+      "The pattern here is that the outer shape remains constant across each row.\n",
+      "Therefore, for the third row, the outer shape for the missing cell must be **Triangle**.\n",
+      "\n",
+      "**2. Inner Geometric Shape:**\n",
+      "*   **Row 1:** Inner Square, Inner Circle, Inner Triangle\n",
+      "*   **Row 2:** Inner Circle, Inner Triangle, Inner Square\n",
+      "*   **Row 3:** Inner Triangle, Inner Square, ?\n",
+      "\n",
+      "The pattern here is a cyclic shift of the three shapes (Square, Circle, Triangle).\n",
+      "Row 2 is a left-shift of Row 1 (Square -> Circle, Circle -> Triangle, Triangle -> Square).\n",
+      "Following this pattern, Row 3 should be a left-shift of Row 2:\n",
+      "*   Inner Circle in R2C1 becomes Inner Triangle in R3C1.\n",
+      "*   Inner Triangle in R2C2 becomes Inner Square in R3C2.\n",
+      "*   Inner Square in R2C3 becomes Inner **Circle** in R3C3.\n",
+      "\n",
+      "Therefore, for the missing cell, the inner shape must be **Circle**.\n",
+      "\n",
+      "**3. Number of Small Filled Circles (Dots):**\n",
+      "*   **Row 1:** 1, 2, 3\n",
+      "*   **Row 2:** 2, 4, 6\n",
+      "*   **Row 3:** 3, 6, ?\n",
+      "\n",
+      "Let's identify the pattern by considering the row number (i) and column number (j).\n",
+      "*   For R1C1 (i=1, j=1): 1 dot. (1 * 1 = 1)\n",
+      "*   For R1C2 (i=1, j=2): 2 dots. (1 * 2 = 2)\n",
+      "*   For R1C3 (i=1, j=3): 3 dots. (1 * 3 = 3)\n",
+      "\n",
+      "*   For R2C1 (i=2, j=1): 2 dots. (2 * 1 = 2)\n",
+      "*   For R2C2 (i=2, j=2): 4 dots. (2 * 2 = 4)\n",
+      "*   For R2C3 (i=2, j=3): 6 dots. (2 * 3 = 6)\n",
+      "\n",
+      "This pattern is consistent: The number of dots is the product of the row number and the column number (dots = i * j).\n",
+      "\n",
+      "Applying this pattern to the missing cell, which is R3C3 (i=3, j=3):\n",
+      "*   Number of dots = 3 * 3 = **9**.\n",
+      "\n",
+      "**Conclusion:**\n",
+      "Combining all the findings:\n",
+      "*   Outer Shape: Triangle\n",
+      "*   Inner Shape: Circle\n",
+      "*   Number of Dots: 9\n",
+      "\n",
+      "Therefore, the missing cell should contain:\n",
+      "**[ (Outer Triangle, Inner Circle), 9 dots ]**\n"
+     ]
+    }
+   ],
    "source": [
     "# Ask it again\n",
     "\n",
-    "response = openai.chat.completions.create(\n",
-    "    model=\"gpt-4.1-mini\",\n",
+    "response = gemini.chat.completions.create(\n",
+    "    model = \"gemini-2.5-flash\",\n",
     "    messages=messages\n",
     ")\n",
     "\n",
@@ -273,9 +377,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Let's analyze the patterns for each of the three attributes in the 3x3 grid:\n",
+       "\n",
+       "**1. Outer Geometric Shape:**\n",
+       "*   **Row 1:** Square, Square, Square\n",
+       "*   **Row 2:** Circle, Circle, Circle\n",
+       "*   **Row 3:** Triangle, Triangle, ?\n",
+       "\n",
+       "The pattern here is that the outer shape remains constant across each row.\n",
+       "Therefore, for the third row, the outer shape for the missing cell must be **Triangle**.\n",
+       "\n",
+       "**2. Inner Geometric Shape:**\n",
+       "*   **Row 1:** Inner Square, Inner Circle, Inner Triangle\n",
+       "*   **Row 2:** Inner Circle, Inner Triangle, Inner Square\n",
+       "*   **Row 3:** Inner Triangle, Inner Square, ?\n",
+       "\n",
+       "The pattern here is a cyclic shift of the three shapes (Square, Circle, Triangle).\n",
+       "Row 2 is a left-shift of Row 1 (Square -> Circle, Circle -> Triangle, Triangle -> Square).\n",
+       "Following this pattern, Row 3 should be a left-shift of Row 2:\n",
+       "*   Inner Circle in R2C1 becomes Inner Triangle in R3C1.\n",
+       "*   Inner Triangle in R2C2 becomes Inner Square in R3C2.\n",
+       "*   Inner Square in R2C3 becomes Inner **Circle** in R3C3.\n",
+       "\n",
+       "Therefore, for the missing cell, the inner shape must be **Circle**.\n",
+       "\n",
+       "**3. Number of Small Filled Circles (Dots):**\n",
+       "*   **Row 1:** 1, 2, 3\n",
+       "*   **Row 2:** 2, 4, 6\n",
+       "*   **Row 3:** 3, 6, ?\n",
+       "\n",
+       "Let's identify the pattern by considering the row number (i) and column number (j).\n",
+       "*   For R1C1 (i=1, j=1): 1 dot. (1 * 1 = 1)\n",
+       "*   For R1C2 (i=1, j=2): 2 dots. (1 * 2 = 2)\n",
+       "*   For R1C3 (i=1, j=3): 3 dots. (1 * 3 = 3)\n",
+       "\n",
+       "*   For R2C1 (i=2, j=1): 2 dots. (2 * 1 = 2)\n",
+       "*   For R2C2 (i=2, j=2): 4 dots. (2 * 2 = 4)\n",
+       "*   For R2C3 (i=2, j=3): 6 dots. (2 * 3 = 6)\n",
+       "\n",
+       "This pattern is consistent: The number of dots is the product of the row number and the column number (dots = i * j).\n",
+       "\n",
+       "Applying this pattern to the missing cell, which is R3C3 (i=3, j=3):\n",
+       "*   Number of dots = 3 * 3 = **9**.\n",
+       "\n",
+       "**Conclusion:**\n",
+       "Combining all the findings:\n",
+       "*   Outer Shape: Triangle\n",
+       "*   Inner Shape: Circle\n",
+       "*   Number of Dots: 9\n",
+       "\n",
+       "Therefore, the missing cell should contain:\n",
+       "**[ (Outer Triangle, Inner Circle), 9 dots ]**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown, display\n",
     "\n",
@@ -318,23 +485,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Software Development and IT Operations\n"
+     ]
+    }
+   ],
    "source": [
     "# First create the messages:\n",
     "\n",
-    "messages = [{\"role\": \"user\", \"content\": \"Something here\"}]\n",
+    "messages = [{\"role\": \"user\", \"content\": \"I am looking for business sectors that can benefit from agentic ai solutions. \\\n",
+    "    Suggest one that you think is interesting. Take into account the number of potential customers and the size of the market.\\\n",
+    "        Respond only with the business sector.\"}]\n",
     "\n",
     "# Then make the first call:\n",
+    "response = gemini.chat.completions.create(\n",
+    "    model = \"gemini-2.5-flash\",\n",
+    "    messages=messages\n",
+    ")\n",
     "\n",
-    "response =\n",
+    "business_idea = response.choices[0].message.content\n",
+    "print(business_idea)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**Pain Point:** **Systemic Knowledge Silos and Inefficient Onboarding in Large, Complex IT Environments.**\n",
+      "\n",
+      "Vast, distributed IT systems, coupled with evolving teams and dispersed documentation, create deep knowledge silos. New engineers struggle to grasp system interdependencies, historical context, and operational nuances, leading to prolonged onboarding, increased error rates, and slow incident resolution. Existing documentation is often outdated, incomplete, or difficult to navigate, hindering knowledge sharing and efficient problem-solving across development and operations.\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"I want to implement Agentic solutions in the field of {business_idea}. \\\n",
+    "    Please suggest a pain point that is challenging and that could be solved with Agentic AI solutions.\\\n",
+    "        Only respond with a summary of the pain point, no more than 100 words.\"\n",
     "\n",
-    "# Then read the business idea:\n",
+    "messages = [{\"role\": \"user\", \"content\": prompt}]\n",
     "\n",
-    "business_idea = response.\n",
+    "response = gemini.chat.completions.create(\n",
+    "    model = \"gemini-2.5-flash-lite\",\n",
+    "    messages=messages\n",
+    ")\n",
+    "pain_point = response.choices[0].message.content\n",
+    "print(pain_point)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This agentic AI solution, **\"Knowledge Weaver,\"** tackles systemic knowledge silos and inefficient onboarding. It comprises:\n",
+      "\n",
+      "1.  **Contextual Ingestion Agent:** Continuously monitors code repositories, incident logs, wikis, and infrastructure configurations.\n",
+      "2.  **Dependency Mapping Agent:** Identifies and visualizes interdependencies between systems, services, and their historical evolution.\n",
+      "3.  **Onboarding Assistant Agent:** Acts as a personalized AI mentor, answering newcomer questions with context-aware information from the ingested knowledge base. It can also generate learning paths and simulated scenarios.\n",
+      "4.  **Documentation Refinement Agent:** Proactively flags outdated or missing documentation and suggests updates based on observed system changes and common operational questions.\n",
+      "\n",
+      "Knowledge Weaver creates a living, interconnected knowledge graph, drastically reducing onboarding time, improving error prevention, and accelerating incident resolution by making tacit and explicit knowledge readily accessible and understandable.\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"I want to implement Agentic solutions in the field of {business_idea}. \\\n",
+    "    The pain point I want to solve is as following: {pain_point}. \\\n",
+    "    Please propose and agentic AI solution for this problem. \\\n",
+    "        Only respond with a summary of the solution, no more than 200 words.\"\n",
     "\n",
-    "# And repeat! In the next message, include the business idea within the message"
+    "messages = [{\"role\": \"user\", \"content\": prompt}]\n",
+    "\n",
+    "response = gemini.chat.completions.create(\n",
+    "    model = \"gemini-2.5-flash-lite\",\n",
+    "    messages=messages\n",
+    ")\n",
+    "solution = response.choices[0].message.content\n",
+    "print(solution)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "This agentic AI solution, **\"Knowledge Weaver,\"** tackles systemic knowledge silos and inefficient onboarding. It comprises:\n",
+       "\n",
+       "1.  **Contextual Ingestion Agent:** Continuously monitors code repositories, incident logs, wikis, and infrastructure configurations.\n",
+       "2.  **Dependency Mapping Agent:** Identifies and visualizes interdependencies between systems, services, and their historical evolution.\n",
+       "3.  **Onboarding Assistant Agent:** Acts as a personalized AI mentor, answering newcomer questions with context-aware information from the ingested knowledge base. It can also generate learning paths and simulated scenarios.\n",
+       "4.  **Documentation Refinement Agent:** Proactively flags outdated or missing documentation and suggests updates based on observed system changes and common operational questions.\n",
+       "\n",
+       "Knowledge Weaver creates a living, interconnected knowledge graph, drastically reducing onboarding time, improving error prevention, and accelerating incident resolution by making tacit and explicit knowledge readily accessible and understandable."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import Markdown, display\n",
+    "\n",
+    "display(Markdown(solution))\n",
+    "\n"
    ]
   },
   {
@@ -359,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
