--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,29 +253,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What should replace the question mark?\n",
+      "Consider the following sequence of numbers:\n",
       "\n",
-      "---\n",
-      "\n",
-      "Consider a 3x3 grid where each cell contains:\n",
-      "1.  An outer geometric shape (Square, Circle, or Triangle).\n",
-      "2.  An inner geometric shape (a smaller Square, Circle, or Triangle).\n",
-      "3.  A number of small filled circles (dots).\n",
-      "\n",
-      "The grid is as follows:\n",
-      "\n",
-      "[ (Outer Square, Inner Square), 1 dot ] | [ (Outer Square, Inner Circle), 2 dots ] | [ (Outer Square, Inner Triangle), 3 dots ]\n",
-      "---------------------------------------|-----------------------------------------|-------------------------------------------\n",
-      "[ (Outer Circle, Inner Circle), 2 dots ] | [ (Outer Circle, Inner Triangle), 4 dots ] | [ (Outer Circle, Inner Square), 6 dots ]\n",
-      "---------------------------------------|-----------------------------------------|-------------------------------------------\n",
-      "[ (Outer Triangle, Inner Triangle), 3 dots ] | [ (Outer Triangle, Inner Square), 6 dots ] | [ ? ]\n"
+      "3, 5, 14\n",
+      "7, 2, 16\n",
+      "4, 6, ?\n"
      ]
     }
    ],
@@ -292,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,64 +291,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Let's analyze the patterns for each of the three attributes in the 3x3 grid:\n",
+      "Let the two numbers in each row be A and B, and the result be C.\n",
       "\n",
-      "**1. Outer Geometric Shape:**\n",
-      "*   **Row 1:** Square, Square, Square\n",
-      "*   **Row 2:** Circle, Circle, Circle\n",
-      "*   **Row 3:** Triangle, Triangle, ?\n",
+      "Let's test a few common arithmetic operations:\n",
       "\n",
-      "The pattern here is that the outer shape remains constant across each row.\n",
-      "Therefore, for the third row, the outer shape for the missing cell must be **Triangle**.\n",
+      "**Row 1: (3, 5) -> 14**\n",
+      "*   A + B = 3 + 5 = 8 (not 14)\n",
+      "*   A * B = 3 * 5 = 15 (close, perhaps A*B - 1?)\n",
+      "*   A^2 + B = 3^2 + 5 = 9 + 5 = 14 (This works for the first row!)\n",
       "\n",
-      "**2. Inner Geometric Shape:**\n",
-      "*   **Row 1:** Inner Square, Inner Circle, Inner Triangle\n",
-      "*   **Row 2:** Inner Circle, Inner Triangle, Inner Square\n",
-      "*   **Row 3:** Inner Triangle, Inner Square, ?\n",
+      "**Row 2: (7, 2) -> 16**\n",
+      "*   Using A^2 + B: 7^2 + 2 = 49 + 2 = 51 (This is not 16, so the A^2 + B pattern is incorrect.)\n",
       "\n",
-      "The pattern here is a cyclic shift of the three shapes (Square, Circle, Triangle).\n",
-      "Row 2 is a left-shift of Row 1 (Square -> Circle, Circle -> Triangle, Triangle -> Square).\n",
-      "Following this pattern, Row 3 should be a left-shift of Row 2:\n",
-      "*   Inner Circle in R2C1 becomes Inner Triangle in R3C1.\n",
-      "*   Inner Triangle in R2C2 becomes Inner Square in R3C2.\n",
-      "*   Inner Square in R2C3 becomes Inner **Circle** in R3C3.\n",
+      "Let's try another pattern for both rows:\n",
       "\n",
-      "Therefore, for the missing cell, the inner shape must be **Circle**.\n",
+      "Consider the pattern: **(A + B) * 2 - 2**\n",
       "\n",
-      "**3. Number of Small Filled Circles (Dots):**\n",
-      "*   **Row 1:** 1, 2, 3\n",
-      "*   **Row 2:** 2, 4, 6\n",
-      "*   **Row 3:** 3, 6, ?\n",
+      "**Row 1:**\n",
+      "*   A = 3, B = 5\n",
+      "*   (3 + 5) * 2 - 2\n",
+      "*   = 8 * 2 - 2\n",
+      "*   = 16 - 2\n",
+      "*   = 14 (This matches the first row)\n",
       "\n",
-      "Let's identify the pattern by considering the row number (i) and column number (j).\n",
-      "*   For R1C1 (i=1, j=1): 1 dot. (1 * 1 = 1)\n",
-      "*   For R1C2 (i=1, j=2): 2 dots. (1 * 2 = 2)\n",
-      "*   For R1C3 (i=1, j=3): 3 dots. (1 * 3 = 3)\n",
+      "**Row 2:**\n",
+      "*   A = 7, B = 2\n",
+      "*   (7 + 2) * 2 - 2\n",
+      "*   = 9 * 2 - 2\n",
+      "*   = 18 - 2\n",
+      "*   = 16 (This matches the second row)\n",
       "\n",
-      "*   For R2C1 (i=2, j=1): 2 dots. (2 * 1 = 2)\n",
-      "*   For R2C2 (i=2, j=2): 4 dots. (2 * 2 = 4)\n",
-      "*   For R2C3 (i=2, j=3): 6 dots. (2 * 3 = 6)\n",
+      "The pattern seems consistent. Now, let's apply it to the third row:\n",
       "\n",
-      "This pattern is consistent: The number of dots is the product of the row number and the column number (dots = i * j).\n",
+      "**Row 3: (4, 6) -> ?**\n",
+      "*   A = 4, B = 6\n",
+      "*   (4 + 6) * 2 - 2\n",
+      "*   = 10 * 2 - 2\n",
+      "*   = 20 - 2\n",
+      "*   = 18\n",
       "\n",
-      "Applying this pattern to the missing cell, which is R3C3 (i=3, j=3):\n",
-      "*   Number of dots = 3 * 3 = **9**.\n",
+      "The missing number is 18.\n",
       "\n",
-      "**Conclusion:**\n",
-      "Combining all the findings:\n",
-      "*   Outer Shape: Triangle\n",
-      "*   Inner Shape: Circle\n",
-      "*   Number of Dots: 9\n",
-      "\n",
-      "Therefore, the missing cell should contain:\n",
-      "**[ (Outer Triangle, Inner Circle), 9 dots ]**\n"
+      "The final answer is $\\boxed{18}$.\n"
      ]
     }
    ],
@@ -377,63 +357,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "Let's analyze the patterns for each of the three attributes in the 3x3 grid:\n",
+       "Let the two numbers in each row be A and B, and the result be C.\n",
        "\n",
-       "**1. Outer Geometric Shape:**\n",
-       "*   **Row 1:** Square, Square, Square\n",
-       "*   **Row 2:** Circle, Circle, Circle\n",
-       "*   **Row 3:** Triangle, Triangle, ?\n",
+       "Let's test a few common arithmetic operations:\n",
        "\n",
-       "The pattern here is that the outer shape remains constant across each row.\n",
-       "Therefore, for the third row, the outer shape for the missing cell must be **Triangle**.\n",
+       "**Row 1: (3, 5) -> 14**\n",
+       "*   A + B = 3 + 5 = 8 (not 14)\n",
+       "*   A * B = 3 * 5 = 15 (close, perhaps A*B - 1?)\n",
+       "*   A^2 + B = 3^2 + 5 = 9 + 5 = 14 (This works for the first row!)\n",
        "\n",
-       "**2. Inner Geometric Shape:**\n",
-       "*   **Row 1:** Inner Square, Inner Circle, Inner Triangle\n",
-       "*   **Row 2:** Inner Circle, Inner Triangle, Inner Square\n",
-       "*   **Row 3:** Inner Triangle, Inner Square, ?\n",
+       "**Row 2: (7, 2) -> 16**\n",
+       "*   Using A^2 + B: 7^2 + 2 = 49 + 2 = 51 (This is not 16, so the A^2 + B pattern is incorrect.)\n",
        "\n",
-       "The pattern here is a cyclic shift of the three shapes (Square, Circle, Triangle).\n",
-       "Row 2 is a left-shift of Row 1 (Square -> Circle, Circle -> Triangle, Triangle -> Square).\n",
-       "Following this pattern, Row 3 should be a left-shift of Row 2:\n",
-       "*   Inner Circle in R2C1 becomes Inner Triangle in R3C1.\n",
-       "*   Inner Triangle in R2C2 becomes Inner Square in R3C2.\n",
-       "*   Inner Square in R2C3 becomes Inner **Circle** in R3C3.\n",
+       "Let's try another pattern for both rows:\n",
        "\n",
-       "Therefore, for the missing cell, the inner shape must be **Circle**.\n",
+       "Consider the pattern: **(A + B) * 2 - 2**\n",
        "\n",
-       "**3. Number of Small Filled Circles (Dots):**\n",
-       "*   **Row 1:** 1, 2, 3\n",
-       "*   **Row 2:** 2, 4, 6\n",
-       "*   **Row 3:** 3, 6, ?\n",
+       "**Row 1:**\n",
+       "*   A = 3, B = 5\n",
+       "*   (3 + 5) * 2 - 2\n",
+       "*   = 8 * 2 - 2\n",
+       "*   = 16 - 2\n",
+       "*   = 14 (This matches the first row)\n",
        "\n",
-       "Let's identify the pattern by considering the row number (i) and column number (j).\n",
-       "*   For R1C1 (i=1, j=1): 1 dot. (1 * 1 = 1)\n",
-       "*   For R1C2 (i=1, j=2): 2 dots. (1 * 2 = 2)\n",
-       "*   For R1C3 (i=1, j=3): 3 dots. (1 * 3 = 3)\n",
+       "**Row 2:**\n",
+       "*   A = 7, B = 2\n",
+       "*   (7 + 2) * 2 - 2\n",
+       "*   = 9 * 2 - 2\n",
+       "*   = 18 - 2\n",
+       "*   = 16 (This matches the second row)\n",
        "\n",
-       "*   For R2C1 (i=2, j=1): 2 dots. (2 * 1 = 2)\n",
-       "*   For R2C2 (i=2, j=2): 4 dots. (2 * 2 = 4)\n",
-       "*   For R2C3 (i=2, j=3): 6 dots. (2 * 3 = 6)\n",
+       "The pattern seems consistent. Now, let's apply it to the third row:\n",
        "\n",
-       "This pattern is consistent: The number of dots is the product of the row number and the column number (dots = i * j).\n",
+       "**Row 3: (4, 6) -> ?**\n",
+       "*   A = 4, B = 6\n",
+       "*   (4 + 6) * 2 - 2\n",
+       "*   = 10 * 2 - 2\n",
+       "*   = 20 - 2\n",
+       "*   = 18\n",
        "\n",
-       "Applying this pattern to the missing cell, which is R3C3 (i=3, j=3):\n",
-       "*   Number of dots = 3 * 3 = **9**.\n",
+       "The missing number is 18.\n",
        "\n",
-       "**Conclusion:**\n",
-       "Combining all the findings:\n",
-       "*   Outer Shape: Triangle\n",
-       "*   Inner Shape: Circle\n",
-       "*   Number of Dots: 9\n",
-       "\n",
-       "Therefore, the missing cell should contain:\n",
-       "**[ (Outer Triangle, Inner Circle), 9 dots ]**"
+       "The final answer is $\\boxed{18}$."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -485,14 +456,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Software Development and IT Operations\n"
+      "Supply Chain Management\n"
      ]
     }
    ],
@@ -515,16 +486,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "**Pain Point:** **Systemic Knowledge Silos and Inefficient Onboarding in Large, Complex IT Environments.**\n",
+      "**Pain Point:** **Dynamic Demand Forecasting & Inventory Optimization in Volatile Markets.**\n",
       "\n",
-      "Vast, distributed IT systems, coupled with evolving teams and dispersed documentation, create deep knowledge silos. New engineers struggle to grasp system interdependencies, historical context, and operational nuances, leading to prolonged onboarding, increased error rates, and slow incident resolution. Existing documentation is often outdated, incomplete, or difficult to navigate, hindering knowledge sharing and efficient problem-solving across development and operations.\n"
+      "Traditional forecasting struggles with rapid, unpredictable shifts in consumer behavior, geopolitical events, or unexpected disruptions. This leads to either stockouts (lost sales, unhappy customers) or excess inventory (carrying costs, obsolescence). Manually adjusting inventory levels across a complex, multi-echelon supply chain in real-time is impossible, creating a persistent challenge to maintain optimal stock while minimizing costs and ensuring product availability.\n"
      ]
     }
    ],
@@ -545,21 +516,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This agentic AI solution, **\"Knowledge Weaver,\"** tackles systemic knowledge silos and inefficient onboarding. It comprises:\n",
+      "The Agentic AI solution deploys a federated network of specialized agents for dynamic demand forecasting and inventory optimization. A **Market Intelligence Agent** continuously monitors real-time external data (news, social media, geopolitical events, competitor activities) to detect emerging demand shifts and potential disruptions. This feeds into a **Dynamic Forecasting Agent**, which employs adaptive, explainable AI models to generate granular, continuously updated demand predictions.\n",
       "\n",
-      "1.  **Contextual Ingestion Agent:** Continuously monitors code repositories, incident logs, wikis, and infrastructure configurations.\n",
-      "2.  **Dependency Mapping Agent:** Identifies and visualizes interdependencies between systems, services, and their historical evolution.\n",
-      "3.  **Onboarding Assistant Agent:** Acts as a personalized AI mentor, answering newcomer questions with context-aware information from the ingested knowledge base. It can also generate learning paths and simulated scenarios.\n",
-      "4.  **Documentation Refinement Agent:** Proactively flags outdated or missing documentation and suggests updates based on observed system changes and common operational questions.\n",
-      "\n",
-      "Knowledge Weaver creates a living, interconnected knowledge graph, drastically reducing onboarding time, improving error prevention, and accelerating incident resolution by making tacit and explicit knowledge readily accessible and understandable.\n"
+      "An **Inventory Optimization Agent** then leverages these forecasts, along with real-time stock levels, lead times, and cost parameters across all supply chain echelons, to autonomously calculate and recommend optimal inventory adjustments. A **Supply Chain Execution Agent** coordinates directly with suppliers and logistics partners to implement these adjustments efficiently. A central **Orchestration Agent** oversees the system, learns from outcomes, and optimizes agent strategies, transforming reactive supply chain management into a proactive, self-optimizing ecosystem that maximizes availability and minimizes costs in volatile markets.\n"
      ]
     }
    ],
@@ -572,7 +538,7 @@
     "messages = [{\"role\": \"user\", \"content\": prompt}]\n",
     "\n",
     "response = gemini.chat.completions.create(\n",
-    "    model = \"gemini-2.5-flash-lite\",\n",
+    "    model = \"gemini-2.5-flash\",\n",
     "    messages=messages\n",
     ")\n",
     "solution = response.choices[0].message.content\n",
@@ -582,20 +548,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "This agentic AI solution, **\"Knowledge Weaver,\"** tackles systemic knowledge silos and inefficient onboarding. It comprises:\n",
+       "The Agentic AI solution deploys a federated network of specialized agents for dynamic demand forecasting and inventory optimization. A **Market Intelligence Agent** continuously monitors real-time external data (news, social media, geopolitical events, competitor activities) to detect emerging demand shifts and potential disruptions. This feeds into a **Dynamic Forecasting Agent**, which employs adaptive, explainable AI models to generate granular, continuously updated demand predictions.\n",
        "\n",
-       "1.  **Contextual Ingestion Agent:** Continuously monitors code repositories, incident logs, wikis, and infrastructure configurations.\n",
-       "2.  **Dependency Mapping Agent:** Identifies and visualizes interdependencies between systems, services, and their historical evolution.\n",
-       "3.  **Onboarding Assistant Agent:** Acts as a personalized AI mentor, answering newcomer questions with context-aware information from the ingested knowledge base. It can also generate learning paths and simulated scenarios.\n",
-       "4.  **Documentation Refinement Agent:** Proactively flags outdated or missing documentation and suggests updates based on observed system changes and common operational questions.\n",
-       "\n",
-       "Knowledge Weaver creates a living, interconnected knowledge graph, drastically reducing onboarding time, improving error prevention, and accelerating incident resolution by making tacit and explicit knowledge readily accessible and understandable."
+       "An **Inventory Optimization Agent** then leverages these forecasts, along with real-time stock levels, lead times, and cost parameters across all supply chain echelons, to autonomously calculate and recommend optimal inventory adjustments. A **Supply Chain Execution Agent** coordinates directly with suppliers and logistics partners to implement these adjustments efficiently. A central **Orchestration Agent** oversees the system, learns from outcomes, and optimizes agent strategies, transforming reactive supply chain management into a proactive, self-optimizing ecosystem that maximizes availability and minimizes costs in volatile markets."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
