--- a/1_foundations/2_lab2.ipynb
+++ b/1_foundations/2_lab2.ipynb
@@ -45,9 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Always remember to do this!\n",
     "load_dotenv(override=True)"
@@ -55,15 +66,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key not set\n",
+      "Anthropic API Key not set (and this is optional)\n",
+      "Google API Key exists and begins AI\n",
+      "DeepSeek API Key not set (and this is optional)\n",
+      "Groq API Key not set (and this is optional)\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the key prefixes to help with any debugging\n",
     "\n",
     "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
     "anthropic_api_key = os.getenv('ANTHROPIC_API_KEY')\n",
-    "google_api_key = os.getenv('GOOGLE_API_KEY')\n",
+    "gemini_api_key = os.getenv('GEMINI_API_KEY')\n",
     "deepseek_api_key = os.getenv('DEEPSEEK_API_KEY')\n",
     "groq_api_key = os.getenv('GROQ_API_KEY')\n",
     "\n",
@@ -77,8 +100,8 @@
     "else:\n",
     "    print(\"Anthropic API Key not set (and this is optional)\")\n",
     "\n",
-    "if google_api_key:\n",
-    "    print(f\"Google API Key exists and begins {google_api_key[:2]}\")\n",
+    "if gemini_api_key:\n",
+    "    print(f\"Google API Key exists and begins {gemini_api_key[:2]}\")\n",
     "else:\n",
     "    print(\"Google API Key not set (and this is optional)\")\n",
     "\n",
@@ -106,9 +129,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'role': 'user',\n",
+       "  'content': 'Please come up with a challenging, nuanced question that I can ask a number of LLMs to evaluate their intelligence. Answer only with the question, no explanation.'}]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "messages"
    ]
@@ -119,6 +154,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "GEMINI_BASE_URL = \"https://generativelanguage.googleapis.com/v1beta/openai/\"\n",
+    "gemini = OpenAI(base_url=GEMINI_BASE_URL, api_key=gemini_api_key)\n",
+    "\n",
+    "response = gemini.chat.completions.create(\n",
+    "    model = \"gemini-2.5-pro\"\n",
+    ")\n",
+    "\n",
+    "\n",
     "openai = OpenAI()\n",
     "response = openai.chat.completions.create(\n",
     "    model=\"gpt-4o-mini\",\n",
@@ -466,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
